# OCaml-DSA

_build/: .db  .digest-db  log
_build/.sandbox/bc4a30d5c9253eef239d7c2521f04b25/default/lib/: stack_machine.ml  topological_sort.ml
_build/default/.ppx/bfcab61e6a21ecf6d2f80029fc1ef484/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/lib/: binary_tree.pp.ml  practice.cma  practice.cmxa  practice.cmxs  practice.ml-gen  stack_machine.pp.ml  topological_sort.pp.ml
_build/default/lib/.merlin-conf/: lib-practice
_build/default/lib/.practice.inline-tests/: partitions-best
_build/default/lib/.practice.objs/: practice__Binary_tree.impl.d  practice__Stack_machine.impl.d  practice__Topological_sort.impl.d
_build/default/lib/.practice.objs/byte/: practice.cmi  practice.cmo  practice.cmt  practice__Binary_tree.cmi  practice__Binary_tree.cmo  (+7 more)
_build/default/test/.merlin-conf/: exe-test_practice
lib/: bfs.ml  biased_coin.ml  binary_tree.ml  coin_change.ml  conference.ml  connect_four.ml  deque.ml  djikstra.ml  double_linked.ml  double_linked.mli  dp.ml  dune  eulerian_circuit.ml  fibonacci.ml  gcd.ml  graph.ml  graph_isomorphism.ml  hashing.ml  heap.ml  heap.mli  longest_palindrome.ml  lru.ml  lru.mli  mastermind.ml  memoization.ml  n_queens.ml  ninety_nine_problems.ml  points.ml  prims.ml  rainwater.ml  rbtree.ml  risk.ml  roman_numerals.ml  sorting.ml  stack_machine.ml  topological_sort.ml  tree_rewrite.ml  trie.ml  union_find.ml  util.ml
src/: biased_coin.ml  dune  hashing.ml  mastermind.ml  stack_machine.ml  topological_sort.ml
(+11 files in other folders)
