(library
 (name practice)
 (modules
  util
  graph
  topological_sort
  stack_machine
  binary_tree
  biased_coin
  hashing
  heap
  djikstra
  mastermind
  sorting
  eulerian_circuit
  ninety_nine_problems
  roman_numerals
  longest_palindrome
  double_linked
  lru
  memoization
  trie
  n_queens
  connect_four
  prims
  points
  dp
  tree_rewrite
  gcd
  bfs
  graph_isomorphism)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (libraries core))
